[gd_scene load_steps=6 format=2]

[ext_resource path="res://bunnyrunner_files/sprites/Background/bg_layer2.png" type="Texture" id=1]
[ext_resource path="res://bunnyrunner_files/sprites/Background/bg_layer1.png" type="Texture" id=2]
[ext_resource path="res://bunnyrunner_files/sprites/Background/bg_layer3.png" type="Texture" id=3]
[ext_resource path="res://bunnyrunner_files/sprites/Background/bg_layer4.png" type="Texture" id=4]
[ext_resource path="res://scripts/parallax.gd" type="Script" id=5]

[node name="parallax" type="ParallaxBackground"]
script = ExtResource( 5 )

[node name="layer1" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="BgLayer1" type="Sprite" parent="layer1"]
position = Vector2( 928, 434 )
texture = ExtResource( 2 )

[node name="layer2" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="BgLayer2" type="Sprite" parent="layer2"]
position = Vector2( 934, 579 )
texture = ExtResource( 1 )

[node name="layer3" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="BgLayer3" type="Sprite" parent="layer3"]
position = Vector2( 969, 487 )
scale = Vector2( 1.00098, 1 )
texture = ExtResource( 3 )

[node name="layer4" type="ParallaxLayer" parent="."]
position = Vector2( 16, -158 )
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 2048, 0 )

[node name="BgLayer4" type="Sprite" parent="layer4"]
position = Vector2( 901, 587 )
texture = ExtResource( 4 )
